--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Futuristic E-Commerce</title>
+  <title>E-Commerce</title>
   <style>
     /* Reset */
     * {
@@ -155,7 +155,7 @@
 </head>
 <body>
   <header>
-    <h1>Futuristic E-Commerce</h1>
+    <h1>E-Commerce</h1>
   </header>
 
   <div class="container">
