--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="card hero-media">
         <div style="position:relative">
           <span class="pill" style="position:absolute; left:16px; top:16px; z-index:10">New • 2025</span>
-          <img src="https://images.unsplash.com/photo-1518442253306-9e3f39c4861b?q=80&w=1600&auto=format&fit=crop" alt="Featured headphones on neon surface" />
+          <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcR0BoLMi9k6gTNBy7z51jc70RCJJFyGkZ4tqXOCZvRqrtkheuxr6PQ2MVlTDCfL86vTcmRGYE0CRsiZTjDPHqs21c_Bd0Dl3Iab4XtUFxqLJVLGYx1nDmDb41MFApuioFfa6k2ilTq3QQ&usqp=CAc" alt="Featured headphones on neon surface" />
         </div>
       </div>
 
